@@ -1,13 +1,15 @@
 
-apply plugin: 'application'
-
+plugins {
+    id "application"
+    id "org.panteleyev.jpackageplugin" version "1.5.2"
+}
 
 
 description = 'vzome-desktop'
 
 def injectionKeys = [
     'version', 'edition', 'buildNumber', 'gitCommit',
-    'githubClientId', 'githubClientSecret'
+    'githubClientId', 'githubClientSecret', 'githubRepoName'
 ]
 
 task recordBuildProperties {
@@ -21,10 +23,19 @@ task recordBuildProperties {
 processResources { 
     dependsOn recordBuildProperties
     from recordBuildProperties.outputDir
-} 
+}
+
+task installUnityJars( type: Copy ) {
+    dependsOn installDist
+    from( "$buildDir/install/desktop/lib" ) {
+        include 'core-*.jar'
+        include 'jackson-*.jar'
+        include 'vecmath-*.jar'
+    }
+    into "${rootProject.projectDir}/oculus/Assets/Plugins/Android"
+}
 
 // used by the 'application' plugin
-// as well as the 'macappbundle' and 'launch4j' Gradle plugins in sub-projects
 ext.jvmArgs = [
     "apple.laf.useScreenMenuBar": "true",
     "apple.awt.antialiasing": "true",
@@ -41,7 +52,15 @@ ext.vzomeArgs = [  // a list, not a map
 mainClassName = 'org.vorthmann.zome.ui.ApplicationUI'
 // used by the 'application' Gradle plugin
 run.args( vzomeArgs )
-applicationDefaultJvmArgs = [ '-Xmx3072M', '-Dfile.encoding=UTF8' ]
+applicationDefaultJvmArgs = [ '-Xmx3072M', '-Dfile.encoding=UTF8', 
+    // These are needed for Windows only.  See the jpackage comments below.
+        "--add-exports",
+        "java.base/java.lang=ALL-UNNAMED",
+        "--add-exports",
+        "java.desktop/sun.awt=ALL-UNNAMED",
+        "--add-exports",
+        "java.desktop/sun.java2d=ALL-UNNAMED",
+]
 jvmArgs.each { entry ->
     applicationDefaultJvmArgs << "-D$entry.key=$entry.value"
 }
@@ -62,34 +81,22 @@ sourceSets {
 }
 
 dependencies {
-    compile group: 'com.github.scribejava', name: 'scribejava-apis', version: '8.1.0'
-    compile group: 'com.github.scribejava', name: 'scribejava-httpclient-okhttp', version: '8.1.0'
-    compile group: 'org.eclipse.mylyn.github', name: 'org.eclipse.egit.github.core', version: '5.12.0.202106021050-rc1'
+    implementation group: 'com.github.scribejava', name: 'scribejava-apis', version: '8.1.0'
+    implementation group: 'com.github.scribejava', name: 'scribejava-httpclient-okhttp', version: '8.1.0'
+    implementation group: 'org.eclipse.mylyn.github', name: 'org.eclipse.egit.github.core', version: '5.12.0.202106021050-rc1'
 
-    compile group: 'java3d', name: 'vecmath', version:'1.6.0-final'
+    implementation group: 'java3d', name: 'vecmath', version:'1.6.0-final'
 
-    compile group: 'org.jogamp', name: 'gluegen-rt', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'gluegen-rt-natives-linux-aarch64', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'gluegen-rt-natives-linux-amd64', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'gluegen-rt-natives-linux-armv6hf', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'gluegen-rt-natives-linux-i586', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'gluegen-rt-natives-macosx-universal', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'gluegen-rt-natives-windows-amd64', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'gluegen-rt-natives-windows-i586', version:'v2.4.0-rc-20200307'
+    // VERY important: as long as we are using a release of JOGL, not a release candidate,
+    //  we can use the documented Maven dependency approach:
+    //     https://jogamp.org/wiki/index.php?title=Maven
+    implementation group: 'org.jogamp.gluegen', name: 'gluegen-rt-main', version:'2.4.0'
+    implementation group: 'org.jogamp.jogl', name: 'jogl-all-main', version:'2.4.0'
 
-    compile group: 'org.jogamp', name: 'jogl-all', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'jogl-all-natives-linux-aarch64', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'jogl-all-natives-linux-amd64', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'jogl-all-natives-linux-armv6hf', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'jogl-all-natives-linux-i586', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'jogl-all-natives-macosx-universal', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'jogl-all-natives-windows-amd64', version:'v2.4.0-rc-20200307'
-    compile group: 'org.jogamp', name: 'jogl-all-natives-windows-i586', version:'v2.4.0-rc-20200307'
-
-    compile group: 'javax.media.jai', name: 'com.springsource.javax.media.jai.core', version:'1.1.3'
-    compile group: 'org.eclipse.lsp4j', name: 'org.eclipse.lsp4j.debug', version: '0.8.1'
+    implementation group: 'javax.media.jai', name: 'com.springsource.javax.media.jai.core', version:'1.1.3'
+    implementation group: 'org.eclipse.lsp4j', name: 'org.eclipse.lsp4j.debug', version: '0.8.1'
     
-    testCompile group: 'junit', name: 'junit', version:'4.12'
+    testImplementation group: 'junit', name: 'junit', version:'4.12'
 }
 
 sourceSets {
@@ -161,8 +168,70 @@ gradle.projectsEvaluated {
 		<< "-Xlint:path" \
 		<< "-Xlint:rawtypes" \
 		<< "-Xlint:unchecked" \
-		<< "-Xlint:-serial" 
-		// TODO: Enable the serial warning and look into fixing ~33 issues. 
-		// Most of them are classes which extend a generic Collection or Exception.
+		<< "-Xlint:serial" 
 	}
+}
+
+jpackage {
+    dependsOn( "installDist" )
+
+    // verbose = true
+
+    input = "$buildDir/install/desktop/lib"
+    destination = "$buildDir/jpackage"
+
+    appName = "${->project.appName}"
+    appVersion = "${->project.version}.${->project.buildNumber}"
+    vendor = "vzome.com"
+
+    mainJar = jar.archiveName
+    mainClass = mainClassName
+
+    arguments = vzomeArgs
+
+    additionalParameters = []
+    applicationDefaultJvmArgs.each { entry ->
+        additionalParameters << "--java-options"
+        additionalParameters << "$entry"
+    }
+
+    fileAssociations = [ "file-associations.properties" ]
+
+    mac {
+        icon = "platform/mac/vZome-6.icns"
+        macPackageIdentifier = "com.vzome.desktop.${->project.version}"
+        macPackageName = "$appName-$appVersion"
+        macSign = true
+        macSigningKeyUserName = "Scott Vorthmann"
+        additionalParameters << "--mac-signing-keychain"
+        additionalParameters << "$keychain"
+    }
+    windows {
+        icon = "platform/windows/resources/icons/vZomeLogo.ico"
+
+        winDirChooser = true
+        winShortcut = true
+
+        // These --add-exports seem to be required to get JOGL 2.4 to work with Java 17 on Windows
+        //  see:  https://forum.jogamp.org/JOGL-2-4-and-Java-17-report-td4041572.html
+        //  and:  https://github.com/jzy3d/jzy3d-api/issues/230#issuecomment-1004197519
+        additionalParameters << "--java-options"
+        additionalParameters <<     "--add-exports"
+        additionalParameters << "--java-options"
+        additionalParameters <<     "java.base/java.lang=ALL-UNNAMED"
+        additionalParameters << "--java-options"
+        additionalParameters <<     "--add-exports"
+        additionalParameters << "--java-options"
+        additionalParameters <<     "java.desktop/sun.awt=ALL-UNNAMED"
+        additionalParameters << "--java-options"
+        additionalParameters <<     "--add-exports"
+        additionalParameters << "--java-options"
+        additionalParameters <<     "java.desktop/sun.java2d=ALL-UNNAMED"
+    }
+
+    // doLast {
+    //     println "appName is $appName"
+    //     println "appVersion is $appVersion"
+    //     println "macPackageName is $macPackageName"
+    // }
 }
